samples/_failures_safe/1761183524_1b48be_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e306698d.c: In function ‘main’:
./samples/SAFE/__tmp_e306698d.c:158:27: error: expected ‘;’ at end of input
  158 |                     printf
      |                           ^
      |                           ;
./samples/SAFE/__tmp_e306698d.c:158:21: error: expected declaration or statement at end of input
  158 |                     printf
      |                     ^~~~~~
./samples/SAFE/__tmp_e306698d.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e306698d.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e306698d.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e306698d.c:158:21: error: expected declaration or statement at end of input
